--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sass": "^1.94.2",
-    "scss": "^0.2.4"
+    "scss": "^0.2.4",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/node": "^20",
